[tool.poetry]
name = "Tabellen"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.12.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
isort = "^5.5.3"
flake8 = "^3.8.3"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
