[tool.poetry]
name = "Tabellen"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.12.2"
oauth2client = "^4.1.3"
requests = "^2.24.0"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
isort = "^5.5.3"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"

[tool.black]
line-length = 88
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
