[tool.poetry]
name = "Tabellen"
version = "0.3.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.12.2"
oauth2client = "^4.1.3"
requests = "^2.24.0"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
pyjwt = "^1.7.1"
Flask-PyMongo = "^2.3.0"
gunicorn = "^20.0.4"
dnspython = "^2.0.0"
celery = "^5.0.0"
redis = "^3.5.3"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
isort = "^5.5.3"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
pytest-cov = "^2.10.1"
httpretty = "^1.0.2"
pydeps = "^1.9.9"

[tool.black]
line-length = 88
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
